<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 Google Inc.
     Licensed to The Android Open Source Project.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<com.android.mail.browse.MessageInviteView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    android:divider="?android:attr/dividerHorizontal"
    android:showDividers="middle"
    android:background="@drawable/attachment_bg_holo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:divider="?android:attr/dividerVertical"
        android:showDividers="middle"
        android:dividerPadding="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/invite_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/message_invite_title" />

        <Button
            android:id="@+id/invite_calendar_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/message_invite_calendar_view"
            style="@style/MessageAttachmentButtonStyle" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:divider="?android:attr/dividerVertical"
            android:showDividers="middle"
            android:dividerPadding="8dp"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="2"
            android:singleLine="true"
            android:text="@string/message_invite_label_attending" />

        <Button
            android:id="@+id/accept"
            android:text="@string/message_invite_accept"
            style="@style/MessageAttachmentButtonStyle" />

        <Button
            android:id="@+id/tentative"
            android:text="@string/message_invite_tentative"
            style="@style/MessageAttachmentButtonStyle" />

        <Button
            android:id="@+id/decline"
            android:text="@string/message_invite_decline"
            style="@style/MessageAttachmentButtonStyle" />

    </LinearLayout>

</com.android.mail.browse.MessageInviteView>
